--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "prop-types": "^15.5.10",
-    "react": "^16.8.1",
+    "react": "^15.5.4",
     "react-datetime": "^2.16.3",
-    "react-dom": "^16.8.1",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.0.0",
     "styled-jsx": "^3.2.1",
     "typeface-roboto": "0.0.54"
   },
