--- a/package.json
+++ b/package.json
@@ -11,23 +11,21 @@
   "author": "paige williams && devin sweeting",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
+    "react": "16.8.1",
     "react-datetime": "^2.16.3",
-    "react-dom": "^15.5.4",
+    "react-dom": "16.8.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.0.0",
-    "styled-jsx": "^3.2.1",
-    "typeface-roboto": "0.0.54"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^4.1.3",
+    "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.13.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^5.13.0",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "^3.0.0-beta.7",
